<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ty.henry.jumpingstats.jumpers.AddEditJumperFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nameEditText"
            style="@style/nameEditText"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/surnameEditText"
            style="@style/nameEditText"
            android:hint="@string/surname" />

        <EditText
            android:id="@+id/heightEditText"
            style="@style/floatEditText"
            android:hint="@string/height"
            android:imeOptions="actionDone"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_of_birth"
            android:gravity="center_horizontal"/>

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/country"/>

        <Spinner
            android:id="@+id/countrySpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/saveButton"
            style="@style/saveButtonStyle"/>

    </LinearLayout>
</ScrollView>