<resources>
    <string name="app_name">JumpingStats</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="height">Height (in metres)</string>
    <string name="height_text">Height</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="pointK">Point K [m]</string>
    <string name="hillSize">Hill size [m]</string>
    <string name="headWindPoints">Points for head wind [points per m/s]</string>
    <string name="tailWindPoints">Points for tail wind [points per m/s]</string>
    <string name="date">Date</string>
    <string name="distance">Distance [m]</string>
    <string name="wind">Wind [m/s] (negative value - head wind)</string>
    <string name="speed">Speed [km/h]</string>
    <string name="judges_marks">Judges marks</string>
    <string name="gate_compensation">Points for gate compensation</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="jumper_exists_message">Such a jumper already exists</string>
    <string name="delete_jumper_message">This jumper will be deleted</string>
    <string name="delete_competition_message">This competition will be deleted</string>
    <string name="delete_result_message">This result will be deleted</string>
    <string name="saved">Saved</string>
    <string name="deleted">Deleted</string>
    <string name="series1">1. series</string>
    <string name="series2">2. series</string>
    <string name="charts_data">Data for charts</string>
    <string name="table_data">Data for table</string>

    <string name="aus">Austria</string>
    <string name="bul">Bulgaria</string>
    <string name="can">Canada</string>
    <string name="czech">Czech Republic</string>
    <string name="est">Estonia</string>
    <string name="fin">Finland</string>
    <string name="fr">France</string>
    <string name="ger">Germany</string>
    <string name="it">Italy</string>
    <string name="jap">Japan</string>
    <string name="kaz">Kazakhstan</string>
    <string name="nor">Norway</string>
    <string name="pol">Poland</string>
    <string name="rus">Russia</string>
    <string name="slo">Slovenia</string>
    <string name="kor">South Korea</string>
    <string name="switz">Switzerland</string>
    <string name="usa">USA</string>

    <string-array name="drawer_options">
        <item>Statistics</item>
        <item>Competitions</item>
        <item>Jumpers</item>
    </string-array>

    <string name="axes_options_title">Data</string>
    <string name="x_axis_options_title">X axis</string>
    <string name="x_axis_competition">Competition</string>
    <string name="x_axis_age">Jumper\'s age</string>
    <string name="x_axis_height">Jumper\'s height</string>

    <string name="y_axis_options_title">Y axis</string>
    <string name="y_axis_distance">Distance</string>
    <string name="y_axis_dist_from_k">Distance from point K</string>
    <string name="y_axis_points_for_dist">Points for distance</string>
    <string name="y_axis_wind_speed">Wind speed</string>
    <string name="y_axis_wind_points">Points for wind</string>
    <string name="y_axis_speed">Jumper\'s speed</string>
    <string name="y_axis_style">Average mark for style</string>
    <string name="y_axis_points">Points</string>

    <string name="jumpers_options_title">Jumpers</string>
    <string name="competition_options_title">Competitions</string>
    <string name="multi_select_pref_summary">%d selected</string>
    <string name="too_many_jumpers_selected">You can select up to %d jumpers</string>
    <string name="group_options_title">Group</string>
    <string name="group_by_point_k_option">Group by point K</string>

    <string name="table_distance">Distance</string>
    <string name="table_wind">Wind speed</string>
    <string name="table_speed">Jumper\'s speed</string>
    <string name="table_style">Average mark for style</string>
    <string name="table_points_diff">Points difference between 1. and 2. series</string>

    <string name="max">Max</string>
    <string name="min">Min</string>
    <string name="avg">Avg</string>

    <string name="winter">Winter</string>
    <string name="summer">Summer</string>
</resources>
