<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ty.henry.jumpingstats.jumpers.JumpersFragment">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/jumpersRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addButton"
        style="@style/addButtonStyle"/>

</FrameLayout>
